<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emergency Services</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Police</string>
    <string name="button2">Hospital</string>
    <string name="button3">Fire</string>
    <string name="title_activity_police">Police</string>
    <string name="call">Call</string>
    <string name="message">Send distress message</string>
    <string name="policeMap">Find nearest police station</string>
    <string name="title_activity_hospital">Hospital</string>
    <string name="hospitalMap">Find nearest hospital</string>
    <string name="title_activity_fire">Fire</string>
    <string name="fireMap">Find nearest fire station</string>
    <string name="messageSent">Message is sent!</string>
    <string name="Contact">Edit Contacts</string>
    <string name="numberOne_key">number_one</string>
    <string name="numberTwo_key">number_two</string>
    <string name="numberThree_key">number_three</string>
    <string name="numberOne">First contact</string>
    <string name="numberTwo">Second contact</string>
    <string name="numberThree">Third contact</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="default_value"></string>


</resources>
