<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:key="@string/numberOne_key"
        android:title="@string/numberOne"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:defaultValue="@string/default_value"/>
    <EditTextPreference
        android:key="@string/numberTwo_key"
        android:title="@string/numberTwo"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:defaultValue="@string/default_value"/>
    <EditTextPreference
        android:key="@string/numberThree_key"
        android:title="@string/numberThree"
        android:inputType="numberDecimal"
        android:singleLine="true"
        android:defaultValue="@string/default_value"/>
</PreferenceScreen>