<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity$PlaceholderFragment">

    <!-- POLICE -->

    <Button
        android:layout_width="75sp"
        android:id="@+id/police_button"
        android:layout_height="75sp"
        android:layout_gravity="center"
        android:layout_marginTop="75sp"
        android:background="@drawable/police" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button1" />


    <!-- HOSPITAL -->

    <Button
        android:id="@+id/hospital_button"
        android:layout_width="75sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:background="@drawable/hospital" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button2" />


    <!-- FIRE -->

    <Button
        android:id="@+id/fire_button"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:background="@drawable/fire"
        android:onClick="Fire" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button3" />



</LinearLayout>
